# vyatta-cfg

./: .frlog  .gitignore  .merge-branch-exclude  COPYING  Jenkinsfile  Makefile.am  README  build.sh  configure.ac
.github/workflows/: codeql.yml  mergifyio_backport.yml  stale.yml
debian/: README  changelog  control  copyright  libvyatta-cfg-dev.install  libvyatta-cfg-dev.lintian-overrides  libvyatta-cfg1.install  libvyatta-cfg1.lintian-overrides  lintian  rules  vyatta-cfg.install  vyatta-cfg.lintian-overrides  vyatta-cfg.postinst.in  vyatta-cfg.postrm.in  vyatta-cfg.preinst  vyatta-cfg.prerm.in  vyatta-cfg.vyatta-router.service  vyatta-cfg.vyos-config-load.service  vyatta-cfg.vyos-initialize.service  vyatta-cfg.vyos-router.service
debian/systemd/: vyatta-router.service
etc/bash_completion.d/: 20vyatta-cfg  vyatta-cfg
etc/default/: vyatta-cfg  vyatta-load-boot
etc/init.d/: vyatta-no-tso  vyatta-ofr  vyatta-router
etc/logrotate.d/: auth  vyatta-config-logs
etc/modprobe.d/: floppy.conf  vyatta_nocopybreak
etc/shell/level/users/: allowed-op  allowed-op.in  allowed-pipe
functions/interpreter/: vyatta-cfg-run
functions/wrapper/: script-template
lib/Vyatta/: Config.pm  ConfigDOMTree.pm  ConfigLoad.pm  ConfigOutput.pm  File.pm  Interface.pm  Keepalived.pm  Misc.pm  TypeChecker.pm  Zone.pm  ioctl.pm
perl_dmod/: Makefile.am
perl_dmod/Cstore/: .gitignore  Changes  Cstore.xs  MANIFEST  Makefile.PL  README  typemap
perl_dmod/Cstore/lib/: Cstore.pm
perl_dmod/Cstore/t/: Cstore.t
python/: setup.py
python/vyos/: config.py
scripts/: VyattaConfig.pm  VyattaConfigDOMTree.pm  VyattaConfigLoad.pm  VyattaConfigOutput.pm  VyattaIpTablesAddressFilter.pm  VyattaMisc.pm  VyattaTypeChecker.pm  XorpConfigParser.pm  helpstring.pl  priority.pl  update-helpstring.pl  update-priority.pl  vyatta-activate-config.pl  vyatta-auto-irqaffin.pl  vyatta-boot-config-loader  vyatta-cfg-cmd-wrapper  vyatta-cfg-notify  vyatta-cfg-reload  vyatta-check-typeless-node.pl  vyatta-cli-expand-var.pl  vyatta-comment-config.pl  vyatta-config-gen-sets.pl  vyatta-config-loader.pl  vyatta-dhclient-hook  vyatta-exists  vyatta-find-type.pl  vyatta-interfaces.pl  vyatta-irqaffin  vyatta-load-config.pl  vyatta-log-commit.pl  vyatta-output-config.pl  vyatta-save-config.pl  vyatta-strip-migration-comments.pl  vyatta-validate-type.pl  vyatta-watchlink-exclude.pl  vyos-user-postcommit-hooks.sh  vyos-user-precommit-hooks.sh  xorp_tmpl_tool
scripts/enumeration/: existing-interfaces
scripts/init/: config-loader.sh  vyos-config  vyos-config-load  vyos-initialize  vyos-router
scripts/system/: vyatta_update_logrotate.pl  vyatta_update_syslog.pl
scripts/system-generators/: vyos-generator
src/: .gitignore  check_tmpl.c  cli_bin.cpp  cli_cstore.h  cli_def.l  cli_new.c  cli_objects.c  cli_objects.h  cli_parse.y  cli_path_utils.c  cli_path_utils.h  cli_shell_api.cpp  cli_val.h  cli_val.l  cli_val_engine.c  cli_val_engine.h  commit.c  commit2.c  commit2.cpp  delete.c  dump_session.c  exe_action.c  priority.c  set.c  sysfs.c  vyos-errors.h
src/cnode/: cnode-algorithm.cpp  cnode-algorithm.hpp  cnode-util.hpp  cnode.cpp  cnode.hpp
src/commit/: commit-algorithm.cpp  commit-algorithm.hpp
src/common/: common.h  defs.h  priority  unionfs.c  unionfs.h
src/cparse/: cparse.hpp  cparse.ypp  cparse_def.h  cparse_lex.l
src/cstore/: cpath.hpp  cstore-c.cpp  cstore-c.h  cstore-node.cpp  cstore-node.hpp  cstore-varref.cpp  cstore-varref.hpp  cstore.cpp  cstore.hpp  ctemplate.hpp  svector.hpp  util.hpp
src/cstore/unionfs/: cstore-unionfs.cpp  cstore-unionfs.hpp  fspath.hpp
templates/: priority
templates/interfaces/: node.def
templates/interfaces/ethernet/: node.def
templates/interfaces/ethernet/node.tag/address/: node.def
templates/interfaces/ethernet/node.tag/description/: node.def
templates/interfaces/ethernet/node.tag/disable/: node.def
templates/interfaces/ethernet/node.tag/duplex/: node.def
templates/interfaces/ethernet/node.tag/enable/: node.def
templates/interfaces/ethernet/node.tag/hw-id/: node.def
templates/interfaces/ethernet/node.tag/mac/: node.def
templates/interfaces/ethernet/node.tag/mtu/: node.def
templates/interfaces/ethernet/node.tag/smp_affinity/: node.def
templates/interfaces/ethernet/node.tag/speed/: node.def
templates/interfaces/ethernet/node.tag/vif/: node.def
templates/interfaces/ethernet/node.tag/vif/node.tag/address/: node.def
templates/interfaces/ethernet/node.tag/vif/node.tag/description/: node.def
templates/interfaces/ethernet/node.tag/vif/node.tag/disable/: node.def
templates/interfaces/ethernet/node.tag/vif/node.tag/enable/: node.def
templates/interfaces/loopback/: node.def
templates/interfaces/loopback/node.tag/address/: node.def
templates/system/gateway-address/: node.def
templates/system/ntp-server/: node.def
tests/: interface.pl
tools/: rl_passwd.cc
utils/: ipset-check-member.c  misc.c  misc.h  type_check.c  type_check.h  vyatta-validate-type.c
